[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Boid2D.gd" type="Script" id=1]

[node name="Boid2D" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 1 )

[node name="Polygon" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 0, -8, 0, 8, 20, 0 )

[node name="Body" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -8, 20, 0, 0, 8 )

[node name="ViewArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="Shape" type="CollisionPolygon2D" parent="ViewArea"]
polygon = PoolVector2Array( 0, -100, 0, 100, 50, 86.602, 70.711, 70.711, 86.603, 50, 100, 0, 86.603, -50, 70.711, -70.711, 50, -86.603 )

[node name="Rays" type="Node2D" parent="."]

[node name="Ray0" type="RayCast2D" parent="Rays"]
cast_to = Vector2( 25, 43.301 )
collision_mask = 2

[node name="Ray1" type="RayCast2D" parent="Rays"]
cast_to = Vector2( 35.355, 35.355 )
collision_mask = 2

[node name="Ray2" type="RayCast2D" parent="Rays"]
enabled = true
cast_to = Vector2( 43.301, 25 )
collision_mask = 2

[node name="Ray3" type="RayCast2D" parent="Rays"]
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 2

[node name="Ray4" type="RayCast2D" parent="Rays"]
enabled = true
cast_to = Vector2( 43.301, -25 )
collision_mask = 2

[node name="Ray5" type="RayCast2D" parent="Rays"]
cast_to = Vector2( 35.355, -35.355 )
collision_mask = 2

[node name="Ray6" type="RayCast2D" parent="Rays"]
cast_to = Vector2( 25, -43.301 )
collision_mask = 2
[connection signal="body_entered" from="ViewArea" to="." method="_on_ViewArea_body_entered"]
[connection signal="body_exited" from="ViewArea" to="." method="_on_ViewArea_body_exited"]
